Added Nicole signoff on spec terms

--- a/dfn/spec.tex
+++ b/dfn/spec.tex
@@ -5,6 +5,7 @@
 \begindeptgroup{pm}
 \label{s:specdfn}
 
+\sigauth{NL}
 Portions of this section conform to \rfc{2119}: ``Key words for use in RFCs to
 Indicate Requirement Levels''. Certain terms from the RFC have been expressly
 avoided; for example, the terms ``should'' and ``should not'' are not used
@@ -12,20 +13,25 @@ because this specification's audience has the capability to alter the
 specification to resolve implementation issues and should exercise that ability.
 
 \begin{description}
+  \sigauth{NL}
   \dt{conforming implementation}
   An implementation that meets all of the requirements of this specification.
 
+  \sigauth{NL}
   \dt{Deprecated}
   When used within context of this specification: the feature or requirement
   will be removed in future revisions of this specification.
 
+  \sigauth{NL}
   \dt{Exempt}
   Denotes a condition under which an implementation need not conform to a
   requirement.
 
+  \sigauth{NL}
   \dt{implementation}
   Software that implements this specification.
 
+  \sigauth{NL}
   \dt{May; Optional}
   Alternatively, the adverb ``optionally''; denotes a requirement whose
   implementation is not required and may be omitted; such \shall be used only to
@@ -33,51 +39,63 @@ specification to resolve implementation issues and should exercise that ability.
   denote requirements that are not essential to the operation of the
   implementation.
 
+  \sigauth{NL}
   \dt{Removed}
   A feature or requirement mentioned in an earlier revision of this
   specification has been removed and will not be superseded.
 
+  \sigauth{NL}
   \dt{section}
   The section containing the mention of this term, as well as any subsections
   contained within it.
 
+  \sigauth{NL}
   \dt{Shall; Must}
   Denotes a mandatory requirement. If an implementation does not implement such
   a requirement, then the implementation is not conforming and the results under
   such a requirement are \undefined.
 
+  \sigauth{NL}
   \dt{Shall Not; Must Not}
   Denotes an absolute prohibition. If an implementation does not honor such a
   prohibition, then the implementation is not conforming and the results under
   such a requirement are \undefined.
 
+  \sigauth{NL}
   \dt{Superseded}
   The feature or requirement mentioned in an earlier revision of this
   specification has been removed and replaced by another.
 
+  \sigauth{NL}
   \dt{Undefined}
   The error condition results in behavior that is not defined by a particular
   standard; this term \shall be used only to document other standards or
   specifications---it \shall not be used to introduce undefined behavior into
   this specification.
 
+  \sigauth{NL}
   \dt{Unspecified}
   The behavior is not determined by this specification or is inconsequential to
   the implementation's operation.
 
+  \sigauth{NL}
   \dt{\S}
   Section reference
 
+  \sigauth{NL}
   \dt{\P}
   Paragraph reference
 
+  \sigauth{NL}
   \dt{$\leftarrow$}
   Store value into variable; as opposed to `$=$', which denotes a declarative
   (and consequently immutable) assignment.
 
+  \sigauth{NL}
   \dt{$\square$}
   End of example or proof.
 
+  \sigauth{NL}
   \dt{$\blacksquare$}
   End of formal definition.
 \end{description}
