Added c1class env to parnum envs

--- a/lvspec.cls
+++ b/lvspec.cls
@@ -158,6 +158,7 @@
   \def\@@premcalc{premcalc}%
   \def\@@forms{forms}%
   \def\@@forms{protdev}%
+  \def\@@coglclass{c1glclass}%
   % allow document by default
   \let\@@cmp\@currenvir
   % XXX: moveme
