Added ceiling notation to definitions

--- a/dfn/spec.tex
+++ b/dfn/spec.tex
@@ -98,6 +98,9 @@ specification to resolve implementation issues and should exercise that ability.
   \sigauth{NL}
   \dt{$\blacksquare$}
   End of formal definition.
+
+  \dt{$\lceil x\rceil$}
+  The ceiling of $x$ (round up to the nearest integer).
 \end{description}
 
 \enddeptgroup
