Added AOP and cause of loss to ins dfns

--- a/dfn/ins.tex
+++ b/dfn/ins.tex
@@ -11,9 +11,15 @@ For a glossary of insurance terms from the state of California,
 see~\cite{gls-ins-calif}.
 
 \begin{description}
+  \dt{all other perlis (AOP) deductible}
+  Synonymous with property deductible.
+
   \sigauth{NL}
   \dt{applicant}
   The intended policy owner.
+
+  \dt{cause of loss}
+  Basic, special, or broad.
 
   \sigauth{NL}
   \dt{DEFS}
