--- a/dfn/spec.tex
+++ b/dfn/spec.tex
@@ -99,6 +99,7 @@ specification to resolve implementation issues and should exercise that ability.
   \dt{$\blacksquare$}
   End of formal definition.
 
+  \sigauth{NL}
   \dt{$\lceil x\rceil$}
   The ceiling of $x$ (round up to the nearest integer).
 \end{description}
