Now adding param, type, and class definitions to aux file

--- a/lvspec.cls
+++ b/lvspec.cls
@@ -20,6 +20,8 @@
 % base class, defaulting to 10pt
 \LoadClass[10pt]{scrreprt}
 
+\RequirePackage{xparse}
+
 \RequirePackage[top=4.5cm,bottom=5cm,width=\textwidth]{geometry}
 \RequirePackage{makeidx}
 \RequirePackage{minitoc}
