--- a/raterspec/class.sty
+++ b/raterspec/class.sty
@@ -74,7 +74,7 @@
     \expandafter\let\expandafter\@@chk\csname classify@#1\endcsname
     \ifx\@@chk\relax
       % no known custom type (may be a normal ref)
-      \PackageWarning{raterspec}{unknown magic ref `#1'}%
+      \PackageTenativeError{raterspec}{unknown magic ref `#1'}%
     \else
       \classifyref{#1}%
     \fi
@@ -281,7 +281,7 @@
 \def\@class@desc#1{{%
   \expandafter\let\expandafter\@@chk\csname classify@#1\endcsname
   \ifx\@@chk\relax
-    \PackageWarning{raterspec}{unknown classification `#1'}%
+    \PackageTenativeError{raterspec}{unknown classification `#1'}%
   \else
     \@@chk
   \fi
@@ -294,7 +294,8 @@
   % fail if neither exists
   \ifx\@@pchk\relax
     \ifx\@@cchk\relax
-      \PackageWarning{raterspec}{unknown identifier for classification match: #1}
+      \PackageTenativeError{raterspec}{%
+        unknown identifier for classification match: #1}
     \else
       % output
       \@@cchk
