Extracted general premcalc from dwelling

--- a/raterspec/parts.tex
+++ b/raterspec/parts.tex
@@ -33,3 +33,6 @@
 \pnumoff\part{Data Classification}\pnumon
   \input{raterspec/sec/dataclass}
 
+\pnumoff\part{Premium Calculation}\pnumon
+  \input{raterspec/sec/premcalc}
+
