--- a/raterspec/parts.tex
+++ b/raterspec/parts.tex
@@ -36,3 +36,7 @@
 \pnumoff\part{Premium Calculation}\pnumon
   \input{raterspec/sec/premcalc}
 
+\pnumoff\part{Forms}\pnumon
+\input{raterspec/sec/forms}
+
+
