Added ties to general raterspec forms dfn section

--- a/raterspec/sec/forms/dfn.tex
+++ b/raterspec/sec/forms/dfn.tex
@@ -4,14 +4,14 @@
 \todo{Additional information on the existing process.}
 
 \sigauth{NL}
-A \dfn*{form} is a~document that is included with a~policy to provide additional
+A~\dfn*{form} is a~document that is included with a~policy to provide additional
 information, coverages, and/or~exclusions.
 
 \sigauth{NL}
-A form is considered to be \dfn{forms!applicable} when each of its specified
-conditions are met. A form \shall be included with the policy only when it is
+A~form is considered to be \dfn{forms!applicable} when each of its specified
+conditions are met. A~form \shall be included with the policy only when it is
 applicable.
 
 \sigauth{NL}
-In the event that a~form code is applicable under multiple circumstances, the
-form \shall be attached to the document a single time.
+In the event that a~form code is applicable under multiple circumstances,
+the~form \shall be attached to the document a single time.
