--- a/raterspec.cls
+++ b/raterspec.cls
@@ -73,6 +73,7 @@
   \expandafter\gdef\csname @raterspec@#1\endcsname{
     \PackageWarning{raterspec}{Missing #2!
       \MessageBreak Define using \expandafter\protect\csname#1\endcsname}%
+    \incomplete
     \todo{No #2 have been defined.}%
   }
   % publically accessible input macro
