--- a/raterspec/parts.tex
+++ b/raterspec/parts.tex
@@ -37,8 +37,11 @@
   \input{raterspec/sec/premcalc}
 
 \pnumoff\part{Forms}\pnumon
-\input{raterspec/sec/forms}
+  \input{raterspec/sec/forms}
 
 \pnumoff\part{ConceptOne Import}\pnumon
-\input{raterspec/sec/c1import}
+  \input{raterspec/sec/c1import}
+
+\pnumoff\part{User Interface}\pnumon
+  \input{raterspec/sec/progui}
 
