Added spacing adjustment for subquestions in raterspec

--- a/raterspec/question.sty
+++ b/raterspec/question.sty
@@ -21,6 +21,7 @@
   {%
     \begin{description}%
     \advance\questionparsep by \parindent\relax
+    \vspace{0.5\baselineskip}
   }
   {%
     \end{description}%
