percent question type for raterspec

--- a/raterspec/question.sty
+++ b/raterspec/question.sty
@@ -33,6 +33,7 @@
 \def\@qtypedesc@float{any floating point value.}
 \def\@qtypedesc@noyes{one of either {\sl No\/} or~{\sl Yes}.}
 \def\@qtypedesc@number{any whole number.}
+\def\@qtypedesc@percent{any valid percent.}
 \def\@qtypedesc@select{one of the options enumerated below:}
 \def\@qtypedesc@text{any string of characters.}
 \newcommand\question[5][]{%
