Typedef constant list now uses longtable

--- a/raterspec/param.sty
+++ b/raterspec/param.sty
@@ -71,11 +71,11 @@
     \vspace{0em plus 0.5\parskip}%
     \goodbreak
     {\bf Defined values:}\\
-    \vspace{0.5\parskip}%
-    \begin{tabular}{lc|l}
+    \vspace{-1.5\parskip}%
+    \begin{longtable}{lc|l}
       % restore the enumv that we gobbled up
       \enumv#2
-    \end{tabular}
+    \end{longtable}
   \endgroup
 }
 \def\enumv[#1]#2#3{%
