s/:/. for select question type text

--- a/raterspec/question.sty
+++ b/raterspec/question.sty
@@ -34,7 +34,7 @@
 \def\@qtypedesc@noyes{one of either {\sl No\/} or~{\sl Yes}.}
 \def\@qtypedesc@number{any whole number.}
 \def\@qtypedesc@percent{any valid percent.}
-\def\@qtypedesc@select{one of the options enumerated below:}
+\def\@qtypedesc@select{one of the options enumerated below.}
 \def\@qtypedesc@text{any string of characters.}
 \newcommand\question[5][]{%
   \item
